[gd_scene load_steps=2 format=3 uid="uid://0e1og0b030xe"]

[ext_resource type="Script" uid="uid://c8q40e5e8htaj" path="res://scenes/battle/battle.gd" id="1_7gynk"]

[node name="Battle" type="CanvasLayer"]
script = ExtResource("1_7gynk")

[node name="Main" type="HBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 48.0
offset_right = 195.0
offset_bottom = 79.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button1" type="Button" parent="Main"]
layout_mode = 2
text = "Fight"

[node name="Button2" type="Button" parent="Main"]
layout_mode = 2
text = "Party"

[node name="Button3" type="Button" parent="Main"]
layout_mode = 2
text = "Item"

[node name="Button4" type="Button" parent="Main"]
layout_mode = 2
text = "Run"

[node name="Moves" type="HBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 90.0
offset_right = 272.0
offset_bottom = 121.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button1" type="Button" parent="Moves"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Move 1"

[node name="Button2" type="Button" parent="Moves"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Move 2"

[node name="Button3" type="Button" parent="Moves"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Move 3"

[node name="Button4" type="Button" parent="Moves"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Move 4"

[node name="Targets" type="HBoxContainer" parent="."]
unique_name_in_owner = true
offset_top = 130.0
offset_right = 40.0
offset_bottom = 170.0

[node name="Button1" type="Button" parent="Targets"]
layout_mode = 2
text = "Self"

[node name="Button2" type="Button" parent="Targets"]
layout_mode = 2
text = "Enemy"

[connection signal="pressed" from="Main/Button1" to="." method="_on_fight_pressed"]
[connection signal="pressed" from="Main/Button2" to="." method="_on_party_pressed"]
[connection signal="pressed" from="Main/Button3" to="." method="_on_item_pressed"]
[connection signal="pressed" from="Main/Button4" to="." method="_on_run_pressed"]
[connection signal="pressed" from="Moves/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Moves/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Moves/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Moves/Button4" to="." method="_on_button_4_pressed"]
